Sun Jun 19 14:09:07 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (run_final): reduce unnecessary object allocation during
	  finalization.

	* gc.c (rb_gc_call_finalizer_at_exit): deferred finalizers list should
	  be cleared before calling them.  fixed: [ruby-talk:145790]

Sat Jun 18 01:15:36 2005  Shugo Maeda  <shugo@ruby-lang.org>

	* ext/readline/readline.c (readline_readline): do not set
	rl_{in,out}stream.

	* ext/readline/readline.c (readline_s_set_input): new method.

	* ext/readline/readline.c (readline_s_set_output): new method.

	* lib/irb/input-method.rb: set Readline.input and Readline.output.

Fri Jun 17 13:01:40 2005  Tanaka Akira  <akr@m17n.org>

	* lib/time.rb (Time.parse): fix previous leap seconds support.
	  (Time.rfc2822): ditto.
	  (Time.xmlschema): ditto.

Thu Jun 16 15:41:32 2005  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ruby.c (load_file): '!' is already read. reported by gotoyuzo.

Thu Jun 16 15:09:38 2005  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* ext/tk/tcltklib.c (ip_rb_threadVwaitCommand): Tcl_Release was missing.

Thu Jun 16 13:34:48 2005  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk.rb: add Tk.getMultiple{Open|Save}File() which return
	  an Array of selected files.

Thu Jun 16 12:53:24 2005  Tanaka Akira  <akr@m17n.org>

	* lib/time.rb (Time.parse): "Fri Jan  1 08:59:60 +0900 1999" was
	  parsed as "Fri Jan 01 09:00:00 JST 1999" even on an environment
	  which supports leap seconds.
	  (Time.rfc2822): ditto.
	  (Time.xmlschema): ditto.

Thu Jun 16 00:13:41 2005  Tanaka Akira  <akr@m17n.org>

	* lib/resolv.rb (Resolv::DNS::Resource#ttl): new attribute.
	  (Resolv::DNS::Resource#==): ignore @ttl.
	  (Resolv::DNS::Resource#hash): ditto.
	  (Resolv::DNS::Message::MessageDecoder#get_rr): save TTL in a
	  Resource object.
	  based on [ruby-core:5190] by Eric Hodel.

Wed Jun 15 18:26:39 2005  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk.rb: support "tk inactive" sub-command [for Tcl/Tk8.5a3]
